--- a/index.html
+++ b/index.html
@@ -73,26 +73,7 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/makethembleed.gif" alt="">
                     <div class="intro-text">
-                        <script language="javascript" type="text/javascript">
-var yourtext="KSECURITY - HACKING";
-var messLength=yourtext.length;
-var initcolor="white";
-var yourcolor="red";
-var speed=150;
-var i;
-var j=0;
-document.write("<h1><font color='"+initcolor+"'>");
-for (i=0;i<messLength;i++){
-document.write("<span id='yourid"+i+"'>"+yourtext.charAt(i)+"</span>"); }document.write("</font></h1>");
-function colorit(){var idd="yourid"+j;
-if (j<messLength){
-document.getElementById(idd).style.color=yourcolor;j++}
-else {j=0;
-for (i=0;i<messLength;i++){
-var newidd="yourid"+i;
-document.getElementById(newidd).style.color=initcolor; } } }
-function doit(){timer=setInterval("colorit()",speed)}
-window.onload=doit;
+                        <span class="name">KENT SECURITY</span>
                         
                         <span class="skills">Web Developer - Penetration Testing  - Computer Forensics</span>
                     </div>
