--- a/index.html
+++ b/index.html
@@ -77,16 +77,16 @@
                         
                         <span class="skills">Web Developer - Penetration Testing  - Computer Forensics</span>
  <script language="javascript" type="text/javascript">
-var yourtext="KSECURITY - HACKING";
+var yourtext=" 冬天來了，春天還會遠嗎 ";
 var messLength=yourtext.length;
-var initcolor="white";
+var initcolor="black";
 var yourcolor="red";
 var speed=150;
 var i;
 var j=0;
-document.write("<h1><font color='"+initcolor+"'>");
+document.write("<h4><font color='"+initcolor+"'>");
 for (i=0;i<messLength;i++){
-document.write("<span id='yourid"+i+"'>"+yourtext.charAt(i)+"</span>"); }document.write("</font></h1>");
+document.write("<span id='yourid"+i+"'>"+yourtext.charAt(i)+"</span>"); }document.write("</font></h4>");
 function colorit(){var idd="yourid"+j;
 if (j<messLength){
 document.getElementById(idd).style.color=yourcolor;j++}
