--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+<link href="img/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 <head>
 
     <meta charset="utf-8">
