--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@ window.onload=doit;
 
     <!-- Contact Form JavaScript -->
     <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script>
+    <script src="js/a.rb"></script>
 
     <!-- Theme JavaScript -->
     <script src="js/freelancer.min.js"></script>
