--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/makethembleed.gif" alt="">
+                    <img class="img-responsive" src="http://img06.deviantart.net/9bdb/i/2013/073/f/9/carbon_dragon_by_samura1i3-d5y0ujn.jpg" alt="">
                     <div class="intro-text">
                         <span class="name">KENT SECURITY</span>
                         
