--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="http://www.spyderonlines.com/images/wallpapers/full-red-wallpaper/full-red-wallpaper-24.jpg" alt="">
+                    <img class="img-responsive" src="http://i.imgur.com/lQbfl.png" alt="">
                     <div class="intro-text">
                         <span class="name">KENT SECURITY</span>
                         
