--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="http://i.imgur.com/lQbfl.png" alt="">
                     <div class="intro-text">
-                        <span class="name">KENT SECURITY</span>
+                        <span class="name">BackTrack 5 </span>
                         
                         <span class="skills">Web Developer - Penetration Testing  - Computer Forensics</span>
  <script language="javascript" type="text/javascript">
